4.5 -> 5.0:
    - rse: support building without ZLib via --without-zlib
    - rse: in rpmio for LZMA use %{__lzma} macro instead of hard-coded /usr/bin/lzma when possible
    - rse: use explicit enable/disable of Perl and Python APIs
    - rse: cleanup elf(3) API related Autoconf glue
    - rse: use --enable-maintainer-mode to enable Automake rebuilds for maintainers only
    - rse: cleanup Automake specifications replace old-style INCLUDES with AM_CPPFLAGS
    - rse: allow one to control/override the /usr/lib64 use via Autoconf option --enable-build-lib64
    - rse: rename Autoconf --enable-ld-version-script to --enable-build-versionscript for consistency reasons
    - rse: make PIC/PIE/warnings build flags controllable via Autoconf --enable-build-{pic,pie,warnings}
    - rse: cleanup Autoconf glue for static linking by resurrecting functionality under --enable-build-static
    - rse: replace too weak Autoconf glue for C99 va_copy(3) with a more sophisticated solution
    - jbj: add patch macro, renamed to Xpatch until fully wired.
    - jbj: remove support for patch-2.1.
    - rse: allow actually used tar(1) and patch(1) tools to be set via %__tar and %__patch
    - rse: add support for patch(1)'s "-d" option to internal macro %patch
    - fray: allow -bb --short-circuit
    - rse: allow leading whitespaces on %setup and %patch lines in *.spec files
    - rse: resolve portability issue related to double definition of mergesort(3)
    - rse: fix building under UnixWare (blind port)
    - rse: fix building under FreeBSD 7-CURRENT
    - rse: fix building under NetBSD 3.1
    - rse: partially cleaned up the "configure.ac" scripts.
    - rse: improve Autoconf glue to flexibly build against third-party libraries (RPM_CHECK_LIB)
    - jbj: collect CentOS5 redhat-rpm-config changes for reference composting.
    - rse: calculate timezone directly, don't rely on timezone variable.
    - rse: remove the hysterical bzip2 interface.